--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,39 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+::-webkit-scrollbar {
+    width: 5px;
+    background-color: #161616;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #bbb5ae;
+    border-radius: 10px;
+  }
+
+  .background-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    /* background-image: url(../src/assets/backgroundPhoto.png); */
+    background-color: #161616;
+    background-attachment: fixed;
+    filter: brightness(50%);
+    object-position: center;
+  }
+  html{
+    scroll-snap-type: y proximity;
+
+  }
+  section{
+    scroll-snap-align: start;
+    /* height: 100vh; */
+    scroll-snap-stop: always;
+  }
