--- a/src/index.css
+++ b/src/index.css
@@ -31,10 +31,15 @@
   }
   html{
     scroll-snap-type: y proximity;
-
   }
-  section{
+    section{
     scroll-snap-align: start;
-    /* height: 100vh; */
-    scroll-snap-stop: always;
+   }
+  @media screen and (max-width: 1000px) {
+    html{
+      scroll-snap-type: y none;
+    }
+    section{
+      scroll-snap-align:  none;
+    }
   }
